--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "firebee"
 version = "0.1.0"
 authors = ["Sai Aung Hlyan Htet <saiaunghlyanhtet2003@gmail.com>"]
+edition = "2021"
 
 [build-dependencies]
 libbpf-cargo = "0.25.0"
@@ -17,4 +18,5 @@ serde_json = "1"
 anyhow = "1"
 log = "0.4"
 env_logger = "0.11"
+libbpf-cargo = "0.25.0"
 
