--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ crossterm = "0.26.0"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_yaml = "0.9"
 anyhow = "1"
 log = "0.4"
 env_logger = "0.11"
