rule: allow port, protocol, subnet filtering
Signed-off-by: saiaunghlyanhtet <saiaunghlyanhtet2003@gmail.com>

--- a/example-policy.yaml
+++ b/example-policy.yaml
@@ -2,14 +2,38 @@ rules:
   - name: block_suspicious_ip
     ip: 192.168.1.100
     action: drop
+    protocol: any
     description: Block known malicious IP address
   
   - name: allow_trusted_server
     ip: 10.0.0.5
     action: allow
+    protocol: any
     description: Allow traffic from trusted internal server
   
   - name: block_scanner
     ip: 203.0.113.42
     action: drop
+    protocol: any
     description: Block port scanner
+  
+  - name: block_ssh_from_subnet
+    ip: 192.168.100.0/24
+    action: drop
+    protocol: tcp
+    dst_port: 22
+    description: Block SSH access from entire subnet
+  
+  - name: allow_dns_queries
+    ip: 8.8.8.8
+    action: allow
+    protocol: udp
+    dst_port: 53
+    description: Allow DNS queries to Google DNS
+  
+  - name: block_http_from_specific_ip
+    ip: 198.51.100.50
+    action: drop
+    protocol: tcp
+    dst_port: 80
+    description: Block HTTP traffic from specific IP
